docker compose and docker file fe+be+db

--- a/angularprojectBE/src/main/resources/application.yml
+++ b/angularprojectBE/src/main/resources/application.yml
@@ -1,23 +1,23 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5433/angularproject
+    url: jdbc:postgresql://localhost:5433/webApp
     username: andrea
     password: root13
     driver-class-name: org.postgresql.Driver
   profiles:
     active: main
   application:
-    name: angularprojectBE
+    name: webapp
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     properties:
       hibernate.format_sql: true
       hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
       hibernate.globally_quoted_identifiers: true # Questa proprietà dice a Hibernate di racchiudere tutti gli identificatori (come nomi di tabelle e colonne) tra virgolette doppie. Questo è particolarmente utile quando si utilizzano parole riservate come nomi di tabelle o colonne in PostgreSQL.
   docker:
     compose:
-      file: ./angularprojectBE/docker-compose.yaml
+      file: docker-compose.yaml
 server:
   port: 8080
